update website texts

--- a/content/gesichter-erkennen.html
+++ b/content/gesichter-erkennen.html
@@ -6,7 +6,7 @@
 		<div class="launcher">
 			<div class="cover"></div>
 			<div class="info">
-				<h2>Gesichter wiedererkennen?</h2>
+				<h2>Experiment B - Gesichtserkennung (Facial-Recognition)</h2>
 				<div class="controls">
 					<button>Experiment starten</button>
 					<a href="#more-info">Mehr erfahren</a>
@@ -17,6 +17,8 @@
 </section>
 
 <section class="container">
+	<p>Willkommen zu Experiment B - Gesichtserkennung! Hier kannst du herausfinden, ob du das Gesichtserkennungssystem austricksen kannst. Das System erkennt dein Gesicht, wenn es grün markiert ist. Die Prozentzahl zeigt an, mit welcher Wahrscheinlichkeit genau dein Gesicht erkannt wird.</p>
+
 	<div class="icon-help">
 		<div class="icon"><img src="/assets/icon-upload.png" /></div>
 		<p>lädt ein Bild von deinem Gerät als Referenzbild</p>
@@ -33,8 +35,6 @@
 		<div class="icon"><img src="/assets/icon-cancel.png" /></div>
 		<p>bricht die Auswahl des Referenzbildes ab</p>
 	</div>
-
-	<p>In diesem Experiment kannst du ausprobieren, ob du das Gesichtserkennungssystem  austricksen kannst. Das System erkennt dein Gesicht, wenn es grün markiert ist. Die Prozentzahl zeigt an,  mit welcher Wahrscheinlichkeit ein Gesicht als solches vom System erkannt wird. Nun hast du die Möglichkeit auszuprobieren, was alles dazu führen kann, dass das System dein Gesicht nicht mehr oder nicht gut erkennt. Nachfolgend einige Ideen dazu, welche Tricks die Erkennung erschweren können:</p>
 </section>
 
 <section class="container hint">
@@ -44,7 +44,7 @@
 	</div>
 
 	<div class="inner">
-		<p>Lade Fotos hoch, die dich in unterschiedlichen Altersstufen zeigen, um festzustellen, ob das Gesichtserkennungssystem in der Lage ist, dich in verschiedenen Lebensabschnitten zu identifizieren.</p>
+		<p>Lade Fotos von dir hoch, die dich in verschiedenen Lebensabschnitten zeigen. Dies hilft dir festzustellen, ob das Gesichtserkennungssystem in der Lage ist, dich in unterschiedlichen Altersstufen zu identifizieren. Beobachte, wie sich die Prozentzahl verändert und ob das System dich in verschiedenen Lebensphasen erkennt.</p>
 	</div>
 </section>
 
@@ -55,7 +55,7 @@
 	</div>
 
 	<div class="inner">
-		<p>Wenn mehrere ähnliche Gesichter auf einem Bild vorhanden sind, kann es leicht zu Verwechslungen kommen. Nutze ein Bild, auf dem mehrere Personen sich ähnlich sehen. Kann das System dein Gesicht korrekt identifizieren?</p>
+		<p>Nutze ein Bild, auf dem mehrere Personen ähnlich aussehen. Das Gesichtserkennungssystem kann bei ähnlichen Gesichtern leicht verwechselt werden. Teste, ob es zwischen den ähnlichen Gesichtern eine Unterscheidung treffen kann. Achte darauf, wie die Prozentzahl reagiert und ob das System dein Gesicht korrekt identifizieren kann.</p>
 	</div>
 </section>
 
@@ -66,8 +66,14 @@
 	</div>
 
 	<div class="inner">
-		<p>Mehrfache Präsenz desselben Gesichts Wenn das gleiche Gesicht mehrmals auf verschiedenen Fotos erscheint, kann es zu Unsicherheiten führen. Verwende mehrere Bilder von dir als gleichzeitige Referenzen und untersuche, welches davon besser erkannt wird und wie du diesen Vorgang beeinflussen kannst.</p>
+		<p>Verwende mehrere Fotos von dir, auf denen dein Gesicht mehrmals erscheint. Wenn das System mit mehreren gleichen Gesichtern konfrontiert wird, können Unsicherheiten auftreten. Untersuche, welches deiner Gesichter besser erkannt wird und wie du diesen Vorgang beeinflussen kannst. Beachte die Veränderungen in der Prozentzahl und den grünen Markierungen.</p>
 	</div>
+</section>
+
+<section class="container">
+	<p>Wenn du tiefer in das Thema Gesichtserkennung eintauchen möchtest, schau dir das Video von Jürgen Geuter an. Hier erklärt er, wie das KI-System hinter diesem Experiment funktioniert, in welchen Bereichen es eingesetzt wird und welchen Einfluss es auf unsere Gesellschaft hat.
+	</p>
+	<p>Viel Spaß beim Experimentieren und Entdecken! Du trägst dazu bei, die Möglichkeiten und Herausforderungen der Gesichtserkennung besser zu verstehen und die Auswirkungen dieser Technologie auf unsere Welt zu erkunden.</p>
 </section>
 
 <section class="container video-embed">
