--- a/content/gesichter-finden.html
+++ b/content/gesichter-finden.html
@@ -7,7 +7,7 @@
 		<div class="launcher">
 			<div class="cover"></div>
 			<div class="info">
-				<h2>Gesichtserkennung oder nicht?</h2>
+				<h2>Experiment A - Gesichter-Finden (Facial-Detection)</h2>
 				<div class="controls">
 					<button>Experiment starten</button>
 					<a href="#more-info">Mehr erfahren</a>
@@ -18,7 +18,7 @@
 </section>
 
 <section class="container">
-	<p>In diesem Experiment kannst du ausprobieren, ob du das Gesichtsfindungssystem austricksen kannst. Das System erkennt ein Gesicht, wenn es grün markiert ist. Die Prozentzahl zeigt an,  mit welcher Wahrscheinlichkeit ein Gesicht als solches vom System erkannt wird. Nun hast du die Möglichkeit auszuprobieren, was alles dazu führen kann, dass das System dein Gesicht nicht mehr oder nicht gut erkennt. Nachfolgend einige Ideen dazu, welche Tricks die Erkennung erschweren können:</p>
+	<p>Willkommen zu Experiment A - Gesichter-Finden! Hier hast du die Gelegenheit, das Gesichtsfindungssystem auf die Probe zu stellen und zu sehen, wie es auf verschiedene Kniffe reagiert. Das System erkennt ein Gesicht, wenn es grün markiert ist. Die angezeigte Prozentzahl gibt an, mit welcher Wahrscheinlichkeit das System ein Gesicht erkennt.</p>
 </section>
 
 <section class="container hint">
@@ -28,7 +28,7 @@
 	</div>
 
 	<div class="inner">
-		<p>Verdecke einen Teil deines Gesichts mit deiner Hand, einem Stück Papier oder etwas, das du gerade griffbereit hast. Besonders die Augen spielen in der Gesichtserkennung eine große Rolle. Probiere daher gerne aus, was dir der Kreis anzeigt, wenn du ein Auge oder beide verdeckst.</p>
+		<p>Teste die Grenzen des Systems, indem du einen Teil deines Gesichts verdeckst. Nutze deine Hand, ein Blatt Papier oder irgendetwas, das du zur Hand hast. Achte besonders darauf, wie die Erkennung auf verdeckte Augen reagiert. Beobachte, wie sich die Prozentzahl im Kreis ändert, wenn du ein Auge oder beide verdeckst.</p>
 	</div>
 </section>
 
@@ -39,19 +39,35 @@
 	</div>
 
 	<div class="inner">
-		<p>Diese Künstliche Intelligenz ist dazu trainiert worden, Gesichter von vorne zu sehen. Probiere aus, deinen Kopf zur Seite zu drehen oder zu neigen und betrachte die Färbung und die Prozentzahlen der Gesichtserkennung. Erkennst du einen Unterschied?</p>
+		<p>Die KI ist darauf trainiert, Gesichter von vorne zu erkennen. Werde kreativ – drehe deinen Kopf zur Seite oder neige ihn. Achte darauf, wie sich die Farben und Prozentzahlen der Gesichtserkennung verändern. Kannst du einen Unterschied feststellen?</p>
 	</div>
 </section>
 
 <section class="container hint">
 	<h3 class="heading">Verändere deine Umgebung</h3>
 	<div class="image">
-		<img src="/assets/explainer-images/background-teal.svg" alt="Silhouette eines Kopfes vor schraffiertem Hintergrund" />
+		<img src="/assets/explainer-images/background-teal.svg" alt="Silhouette eines Kopfes mit einer gepunkteten Fläche im Gesicht" />
 	</div>
 
 	<div class="inner">
-		<p>Die Umgebung hinter deinem Gesicht zu verändern, kann der KI die Arbeit erschweren. Probiere dich hier aus, du kannst deine Umgebung etwas abdunkeln oder beleuchten, indem du das Licht einmal ausschaltest oder halte die Kamera so, dass die Sonne im Bild ist. </p>
+		<p>Teste, wie das System auf Veränderungen an deinem Gesicht reagiert. Male es mit ungewöhnlichen Farben an oder füge temporäre Markierungen hinzu. Welche Auswirkungen hat das auf die Erkennung und die Anzeige im Kreis?</p>
 	</div>
+</section>
+
+<section class="container hint">
+	<h3 class="heading">Bemale dein Gesicht</h3>
+	<div class="image">
+		<img src="/assets/explainer-images/paint-teal.svg" alt="Silhouette eines Kopfes vor schraffiertem Hintergrund" />
+	</div>
+
+	<div class="inner">
+		<p>Die Umgebung kann die Arbeit der KI beeinflussen. Spiele mit dem Licht: Dunkle den Raum ab oder beleuchte ihn anders, indem du das Licht aus- oder einschaltest. Halte die Kamera auch mal so, dass die Sonne ins Bild scheint. Wie beeinflusst das die Erkennung?</p>
+	</div>
+</section>
+
+<section class="container">
+	<p>Wenn du mehr über das Thema Gesichts-Findung (Face-Detection) erfahren möchtest, schau dir das Erklärvideo von Jürgen Geuter (Director of Research | Art+Com) an. Dort erfährst du, wie das KI-System hinter diesem Experiment funktioniert und in welchen Bereichen es Anwendung findet.</p>
+	<p>Viel Spaß beim Experimentieren und Entdecken! Du trägst dazu bei, Gesichtserkennung besser zu verstehen und die Möglichkeiten und Grenzen dieser Technologie zu erkunden.</p>
 </section>
 
 <section class="container video-embed">
