minor text changes and home page links

--- a/content/gesichter-finden.html
+++ b/content/gesichter-finden.html
@@ -7,7 +7,7 @@
 		<div class="launcher">
 			<div class="cover"></div>
 			<div class="info">
-				<h2>Experiment A - Gesichter-Finden (Facial-Detection)</h2>
+				<h2>Gesichter-Finden (Facial-Detection)</h2>
 				<div class="controls">
 					<button>Experiment starten</button>
 					<a href="#more-info">Mehr erfahren</a>
