--- a/content/index.html
+++ b/content/index.html
@@ -8,11 +8,11 @@
 	<p>
 Wir legen großen Wert auf Datenschutz: Deine persönlichen Daten werden nicht gespeichert, und die Systeme arbeiten lokal. Das heißt, sie werden auf deinem Gerät ausgeführt und beim Schließen des Browsers gelöscht.
 
-<h3>Experiment A: Gesichter-Finden (Facial-Detection)</h3>
+<h3><a href="/gesichter-finden/">Experiment A: Gesichter-Finden (Facial-Detection)</a></h3>
 <p>
 Finde heraus, ob dein Gesicht von dem Facial Detection System über die Kamera deines Laptops oder deines Handys auch als Gesicht erkennt. Im Experiment kannst du dann ausprobieren wie du das Gesichtsfindungs-System überlisten kannst. Teste, wie es auf verschiedene Tricks reagiert,  zum Beispiel durch das Verdecken deines Gesichts oder durch eine veränderte Perspektive. Probiere aus, wann das System ein Gesicht besser oder schlechter erkennt.
 </p>
-<h3>Experiment B: Gesichter-Wiedererkennen (Facial-Recognition)</h3>
+<h3><a href="/gesichter-erkennen/">Experiment B: Gesichter-Wiedererkennen (Facial-Recognition)</a></h3>
 <p>
 Für dieses Experiment gehen wir mit dir noch einen Schritt weiter. Erforsche, ob die KI in diesem Experiment genau dein Gesicht auf Fotos wiedererkennt und welche Bedingungen diese Erkennung besser oder schlechter macht. Hierfür kannst du die Lichtverhältnisse ändern oder eine leicht veränderte Perspektive einsetzen. Lade mehrere Fotos hoch, die dich in verschiedenen Lebensabschnitten zeigen, oder verwende Abbildungen anderer Personen, die dir vielleicht ähneln. Kannst du das Gesichtserkennungssystem austricksen? 
 </p>
