--- a/content/gesichter-erkennen.html
+++ b/content/gesichter-erkennen.html
@@ -1,86 +1,125 @@
-<header class="off-screen">
-	<h1>Gesichter wieder erkennen?</h1>
-</header>
-<section>
-	<div id="experiment-b">
-		<div class="launcher">
-			<div class="cover"></div>
-			<div class="info">
-				<h2>Gesichtserkennung (Facial-Recognition)</h2>
-				<div class="controls">
-					<button>Experiment starten</button>
-					<a href="#more-info">Mehr erfahren</a>
-				</div>
-			</div>
-		</div>
-	</div>
+<section id="experiment-b" class="experiment">
+  <div class="launcher">
+    <button>Experiment starten</button>
+  </div>
 </section>
 
 <section class="container">
-	<p>Willkommen zu Experiment B - Gesichtserkennung! Hier kannst du herausfinden, ob du das Gesichtserkennungssystem austricksen kannst. Das System erkennt dein Gesicht, wenn es grün markiert ist. Die Prozentzahl zeigt an, mit welcher Wahrscheinlichkeit genau dein Gesicht erkannt wird.</p>
+  <h1>Gesichtserkennung (Facial-Recognition)</h1>
+  <p>
+    Hier kannst du herausfinden, ob du das Gesichtserkennungssystem austricksen
+    kannst. Das System erkennt dein Gesicht, wenn es grün markiert ist. Die
+    Prozentzahl zeigt an, mit welcher Wahrscheinlichkeit genau dein Gesicht
+    erkannt wird.
+  </p>
 
-	<div class="icon-help">
-		<div class="icon"><img src="/assets/icon-upload.png" /></div>
-		<p>lädt ein Bild von deinem Gerät als Referenzbild</p>
-	</div>
-	<div class="icon-help">
-		<div class="icon"><img src="/assets/icon-camera.png" /></div>
-		<p>verwendet das aktuelle Kamerabild als Referenz</p>
-	</div>
-	<div class="icon-help">
-		<div class="icon"><img src="/assets/icon-confirm.png" /></div>
-		<p>bestätigt das ausgewählte Referenxbild und die erkannten Gesichter</p>
-	</div>
-	<div class="icon-help">
-		<div class="icon"><img src="/assets/icon-cancel.png" /></div>
-		<p>bricht die Auswahl des Referenzbildes ab</p>
-	</div>
+  <div class="icon-help">
+    <div class="icon"><img src="/assets/icon-upload.png" /></div>
+    <p>lädt ein Bild von deinem Gerät als Referenzbild</p>
+  </div>
+  <div class="icon-help">
+    <div class="icon"><img src="/assets/icon-camera.png" /></div>
+    <p>verwendet das aktuelle Kamerabild als Referenz</p>
+  </div>
+  <div class="icon-help">
+    <div class="icon"><img src="/assets/icon-confirm.png" /></div>
+    <p>bestätigt das ausgewählte Referenxbild und die erkannten Gesichter</p>
+  </div>
+  <div class="icon-help">
+    <div class="icon"><img src="/assets/icon-cancel.png" /></div>
+    <p>bricht die Auswahl des Referenzbildes ab</p>
+  </div>
+
+  <section class="hint">
+    <h3 class="heading">Verschiedene Altersstufen</h3>
+    <div class="image">
+      <img
+        src="/assets/explainer-images/age-white.svg"
+        alt="Vier einfach gezeichnete Gesichter unterschiedlichen Alters"
+      />
+    </div>
+
+    <div class="inner">
+      <p>
+        Lade Fotos von dir hoch, die dich in verschiedenen Lebensabschnitten
+        zeigen. Dies hilft dir festzustellen, ob das Gesichtserkennungssystem in
+        der Lage ist, dich in unterschiedlichen Altersstufen zu identifizieren.
+        Beobachte, wie sich die Prozentzahl verändert und ob das System dich in
+        verschiedenen Lebensphasen erkennt.
+      </p>
+    </div>
+  </section>
+
+  <section class="hint">
+    <h3 class="heading">Viele ähnliche Gesichter im Vergleich</h3>
+    <div class="image">
+      <img
+        src="/assets/explainer-images/similar-white.svg"
+        alt="Vier sehr ähnliche Kopf-Silhouetten"
+      />
+    </div>
+
+    <div class="inner">
+      <p>
+        Nutze ein Bild, auf dem mehrere Personen ähnlich aussehen. Das
+        Gesichtserkennungssystem kann bei ähnlichen Gesichtern leicht
+        verwechselt werden. Teste, ob es zwischen den ähnlichen Gesichtern eine
+        Unterscheidung treffen kann. Achte darauf, wie die Prozentzahl reagiert
+        und ob das System dein Gesicht korrekt identifizieren kann.
+      </p>
+    </div>
+  </section>
+
+  <section class="hint">
+    <h3 class="heading">Mehrmals dasselbe Gesicht</h3>
+    <div class="image">
+      <img
+        src="/assets/explainer-images/same-white.svg"
+        alt="Viermal die gleiche Kopf-Silhouette"
+      />
+    </div>
+
+    <div class="inner">
+      <p>
+        Verwende mehrere Fotos von dir, auf denen dein Gesicht mehrmals
+        erscheint. Wenn das System mit mehreren gleichen Gesichtern konfrontiert
+        wird, können Unsicherheiten auftreten. Untersuche, welches deiner
+        Gesichter besser erkannt wird und wie du diesen Vorgang beeinflussen
+        kannst. Beachte die Veränderungen in der Prozentzahl und den grünen
+        Markierungen.
+      </p>
+    </div>
+  </section>
+
+  <p>
+    Wenn du tiefer in das Thema Gesichtserkennung eintauchen möchtest, schau dir
+    das Video von Jürgen Geuter an. Hier erklärt er, wie das KI-System hinter
+    diesem Experiment funktioniert, in welchen Bereichen es eingesetzt wird und
+    welchen Einfluss es auf unsere Gesellschaft hat.
+  </p>
+  <p>
+    Viel Spaß beim Experimentieren und Entdecken! Du trägst dazu bei, die
+    Möglichkeiten und Herausforderungen der Gesichtserkennung besser zu
+    verstehen und die Auswirkungen dieser Technologie auf unsere Welt zu
+    erkunden.
+  </p>
+
+  <section class="video-embed">
+    <h2>Erklärvideo zur Gesichtserkennung</h2>
+    <p>
+      Wenn du dich tiefer mit dem Thema Gesichtserkennung auseinandersetzen
+      möchtest, erläutert dir Jürgen Geuter in diesem Video, wie das KI-System
+      hinter diesem Experiment funktioniert, wo es im Einsatz ist und welchen
+      Einfluss es auf unsere Gesellschaft hat.
+    </p>
+    <iframe
+      src="https://www.youtube-nocookie.com/embed/9OP7Sn3MfeM?si=tetie5yCMb9qqFjL"
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen
+    ></iframe>
+  </section>
 </section>
-
-<section class="container hint">
-	<h3 class="heading">Verschiedene Altersstufen</h3>
-	<div class="image">
-		<img src="/assets/explainer-images/age-teal.svg" alt="Vier einfach gezeichnete Gesichter unterschiedlichen Alters" />
-	</div>
-
-	<div class="inner">
-		<p>Lade Fotos von dir hoch, die dich in verschiedenen Lebensabschnitten zeigen. Dies hilft dir festzustellen, ob das Gesichtserkennungssystem in der Lage ist, dich in unterschiedlichen Altersstufen zu identifizieren. Beobachte, wie sich die Prozentzahl verändert und ob das System dich in verschiedenen Lebensphasen erkennt.</p>
-	</div>
-</section>
-
-<section class="container hint">
-	<h3 class="heading">Viele ähnliche Gesichter im Vergleich</h3>
-	<div class="image">
-		<img src="/assets/explainer-images/similar-teal.svg" alt="Vier sehr ähnliche Kopf-Silhouetten" />
-	</div>
-
-	<div class="inner">
-		<p>Nutze ein Bild, auf dem mehrere Personen ähnlich aussehen. Das Gesichtserkennungssystem kann bei ähnlichen Gesichtern leicht verwechselt werden. Teste, ob es zwischen den ähnlichen Gesichtern eine Unterscheidung treffen kann. Achte darauf, wie die Prozentzahl reagiert und ob das System dein Gesicht korrekt identifizieren kann.</p>
-	</div>
-</section>
-
-<section class="container hint">
-	<h3 class="heading">Mehrmals dasselbe Gesicht</h3>
-	<div class="image">
-		<img src="/assets/explainer-images/same-teal.svg" alt="Viermal die gleiche Kopf-Silhouette" />
-	</div>
-
-	<div class="inner">
-		<p>Verwende mehrere Fotos von dir, auf denen dein Gesicht mehrmals erscheint. Wenn das System mit mehreren gleichen Gesichtern konfrontiert wird, können Unsicherheiten auftreten. Untersuche, welches deiner Gesichter besser erkannt wird und wie du diesen Vorgang beeinflussen kannst. Beachte die Veränderungen in der Prozentzahl und den grünen Markierungen.</p>
-	</div>
-</section>
-
-<section class="container">
-	<p>Wenn du tiefer in das Thema Gesichtserkennung eintauchen möchtest, schau dir das Video von Jürgen Geuter an. Hier erklärt er, wie das KI-System hinter diesem Experiment funktioniert, in welchen Bereichen es eingesetzt wird und welchen Einfluss es auf unsere Gesellschaft hat.
-	</p>
-	<p>Viel Spaß beim Experimentieren und Entdecken! Du trägst dazu bei, die Möglichkeiten und Herausforderungen der Gesichtserkennung besser zu verstehen und die Auswirkungen dieser Technologie auf unsere Welt zu erkunden.</p>
-</section>
-
-<section class="container video-embed">
-	<h2>Video von Jürgen über Gesichtserkennung (Facial-Recognition)</h2><a id="more-info"></a>
-	<p>Wenn du dich tiefer mit dem Thema Gesichtserkennung auseinandersetzen möchtest, erläutert dir Jürgen Geuter in diesem Video, wie das KI-System hinter diesem Experiment funktioniert, wo es im Einsatz ist und welchen Einfluss es auf unsere Gesellschaft hat.</p>
-	<iframe src="https://www.youtube-nocookie.com/embed/9OP7Sn3MfeM?si=tetie5yCMb9qqFjL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-</section>
-
 <script src="/static/face-api.js"></script>
 <script src="/static/experiment-b.js" type="module"></script>
