--- a/content/gesichter-finden.html
+++ b/content/gesichter-finden.html
@@ -1,79 +1,128 @@
-
-<header class="off-screen">
-	<h1>Gesichter erkennen, oder nicht?</h1>
-</header>
-<section class="">
-	<div id="experiment-a">
-		<div class="launcher">
-			<div class="cover"></div>
-			<div class="info">
-				<h2>Gesichter-Finden (Facial-Detection)</h2>
-				<div class="controls">
-					<button>Experiment starten</button>
-					<a href="#more-info">Mehr erfahren</a>
-				</div>
-			</div>
-		</div>
-	</div>
+<section id="experiment-a" class="experiment">
+  <d class="launcher">
+      <button>Experiment starten</button>
+  </section>
 </section>
 
 <section class="container">
-	<p>Willkommen zu Experiment A - Gesichter-Finden! Hier hast du die Gelegenheit, das Gesichtsfindungssystem auf die Probe zu stellen und zu sehen, wie es auf verschiedene Kniffe reagiert. Das System erkennt ein Gesicht, wenn es grün markiert ist. Die angezeigte Prozentzahl gibt an, mit welcher Wahrscheinlichkeit das System ein Gesicht erkennt.</p>
-</section>
 
-<section class="container hint">
-	<h3 class="heading">Verdecke dein Gesicht</h3>
-	<div class="image">
-		<img src="/assets/explainer-images/part-teal.svg" alt="Silhouette eines Kopfes mit der rechten Gesichtshälfte schraffiert" />
-	</div>
+  <h1>Gesichter-Finden (Facial-Detection)</h1>
+  <p>
+    Hier hast du die Gelegenheit, das Gesichtsfindungssystem auf die Probe zu
+    stellen und zu sehen, wie es auf verschiedene Kniffe reagiert. Das System
+    erkennt ein Gesicht, wenn es grün markiert ist. Die angezeigte Prozentzahl
+    gibt an, mit welcher Wahrscheinlichkeit das System ein Gesicht erkennt.
+  </p>
 
-	<div class="inner">
-		<p>Teste die Grenzen des Systems, indem du einen Teil deines Gesichts verdeckst. Nutze deine Hand, ein Blatt Papier oder irgendetwas, das du zur Hand hast. Achte besonders darauf, wie die Erkennung auf verdeckte Augen reagiert. Beobachte, wie sich die Prozentzahl im Kreis ändert, wenn du ein Auge oder beide verdeckst.</p>
-	</div>
-</section>
+  <p>
+    Wir legen großen Wert auf Datenschutz: Deine persönlichen Daten werden nicht
+    gespeichert, und die Systeme arbeiten lokal. Das heißt, sie werden auf
+    deinem Gerät ausgeführt und beim Schließen des Browsers gelöscht.
+  </p>
 
-<section class="container hint">
-	<h3 class="heading">Wechsle die Perspektive</h3>
-	<div class="image">
-		<img src="/assets/explainer-images/perspective-teal.svg" alt="Seitliche Silhouette eines Kopfes mit einem Pfeil im Uhrseigerzinn darüber" />
-	</div>
+  <section class="hint">
+    <h3 class="heading">Verdecke dein Gesicht</h3>
+    <div class="image">
+      <img
+        src="/assets/explainer-images/part-white.svg"
+        alt="Silhouette eines Kopfes mit der rechten Gesichtshälfte schraffiert"
+      />
+    </div>
 
-	<div class="inner">
-		<p>Die KI ist darauf trainiert, Gesichter von vorne zu erkennen. Werde kreativ – drehe deinen Kopf zur Seite oder neige ihn. Achte darauf, wie sich die Farben und Prozentzahlen der Gesichtserkennung verändern. Kannst du einen Unterschied feststellen?</p>
-	</div>
-</section>
+    <div class="inner">
+      <p>
+        Teste die Grenzen des Systems, indem du einen Teil deines Gesichts
+        verdeckst. Nutze deine Hand, ein Blatt Papier oder irgendetwas, das du
+        zur Hand hast. Achte besonders darauf, wie die Erkennung auf verdeckte
+        Augen reagiert. Beobachte, wie sich die Prozentzahl im Kreis ändert,
+        wenn du ein Auge oder beide verdeckst.
+      </p>
+    </div>
+  </section>
 
-<section class="container hint">
-	<h3 class="heading">Verändere deine Umgebung</h3>
-	<div class="image">
-		<img src="/assets/explainer-images/background-teal.svg" alt="Silhouette eines Kopfes mit einer gepunkteten Fläche im Gesicht" />
-	</div>
+  <section class="hint">
+    <h3 class="heading">Wechsle die Perspektive</h3>
+    <div class="image">
+      <img
+        src="/assets/explainer-images/perspective-white.svg"
+        alt="Seitliche Silhouette eines Kopfes mit einem Pfeil im Uhrseigerzinn darüber"
+      />
+    </div>
 
-	<div class="inner">
-		<p>Teste, wie das System auf Veränderungen an deinem Gesicht reagiert. Male es mit ungewöhnlichen Farben an oder füge temporäre Markierungen hinzu. Welche Auswirkungen hat das auf die Erkennung und die Anzeige im Kreis?</p>
-	</div>
-</section>
+    <div class="inner">
+      <p>
+        Die KI ist darauf trainiert, Gesichter von vorne zu erkennen. Werde
+        kreativ – drehe deinen Kopf zur Seite oder neige ihn. Achte darauf, wie
+        sich die Farben und Prozentzahlen der Gesichtserkennung verändern.
+        Kannst du einen Unterschied feststellen?
+      </p>
+    </div>
+  </section>
 
-<section class="container hint">
-	<h3 class="heading">Bemale dein Gesicht</h3>
-	<div class="image">
-		<img src="/assets/explainer-images/paint-teal.svg" alt="Silhouette eines Kopfes vor schraffiertem Hintergrund" />
-	</div>
+  <section class="hint">
+    <h3 class="heading">Verändere deine Umgebung</h3>
+    <div class="image">
+      <img
+        src="/assets/explainer-images/background-white.svg"
+        alt="Silhouette eines Kopfes mit einer gepunkteten Fläche im Gesicht"
+      />
+    </div>
 
-	<div class="inner">
-		<p>Die Umgebung kann die Arbeit der KI beeinflussen. Spiele mit dem Licht: Dunkle den Raum ab oder beleuchte ihn anders, indem du das Licht aus- oder einschaltest. Halte die Kamera auch mal so, dass die Sonne ins Bild scheint. Wie beeinflusst das die Erkennung?</p>
-	</div>
-</section>
+    <div class="inner">
+      <p>
+        Teste, wie das System auf Veränderungen an deinem Gesicht reagiert. Male
+        es mit ungewöhnlichen Farben an oder füge temporäre Markierungen hinzu.
+        Welche Auswirkungen hat das auf die Erkennung und die Anzeige im Kreis?
+      </p>
+    </div>
+  </section>
 
-<section class="container">
-	<p>Wenn du mehr über das Thema Gesichts-Findung (Face-Detection) erfahren möchtest, schau dir das Erklärvideo von Jürgen Geuter (Director of Research | Art+Com) an. Dort erfährst du, wie das KI-System hinter diesem Experiment funktioniert und in welchen Bereichen es Anwendung findet.</p>
-	<p>Viel Spaß beim Experimentieren und Entdecken! Du trägst dazu bei, Gesichtserkennung besser zu verstehen und die Möglichkeiten und Grenzen dieser Technologie zu erkunden.</p>
-</section>
+  <section class="hint">
+    <h3 class="heading">Bemale dein Gesicht</h3>
+    <div class="image">
+      <img
+        src="/assets/explainer-images/paint-white.svg"
+        alt="Silhouette eines Kopfes vor schraffiertem Hintergrund"
+      />
+    </div>
 
-<section class="container video-embed">
-	<h2>Erklärvideo zu der Gesichtsfindung (Face-Detection)</h2><a id="more-info"></a>
-	<p>Wenn du mehr zu dem Thema Face-Detection erfahren möchtest, erklärt dir Jürgen Geuter in diesem Video, wie das KI-System hinter diesem Experiment funktioniert und wo es eingesetzt wird.</p>
-	<iframe src="https://www.youtube-nocookie.com/embed/iW8YDWYIXlA?si=V6N9anYQie_GAIP-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <div class="inner">
+      <p>
+        Die Umgebung kann die Arbeit der KI beeinflussen. Spiele mit dem Licht:
+        Dunkle den Raum ab oder beleuchte ihn anders, indem du das Licht aus-
+        oder einschaltest. Halte die Kamera auch mal so, dass die Sonne ins Bild
+        scheint. Wie beeinflusst das die Erkennung?
+      </p>
+    </div>
+  </section>
+
+  <p>
+    Wenn du mehr über das Thema Gesichts-Findung (Face-Detection) erfahren
+    möchtest, schau dir das Erklärvideo von Jürgen Geuter (Director of Research
+    | Art+Com) an. Dort erfährst du, wie das KI-System hinter diesem Experiment
+    funktioniert und in welchen Bereichen es Anwendung findet.
+  </p>
+  <p>
+    Viel Spaß beim Experimentieren und Entdecken! Du trägst dazu bei,
+    Gesichtserkennung besser zu verstehen und die Möglichkeiten und Grenzen
+    dieser Technologie zu erkunden.
+  </p>
+
+  <section class="video-embed">
+    <h2>Erklärvideo zur Gesichtsfindung</h2>
+    <p>
+      Wenn du mehr zu dem Thema Face-Detection erfahren möchtest, erklärt dir
+      Jürgen Geuter in diesem Video, wie das KI-System hinter diesem Experiment
+      funktioniert und wo es eingesetzt wird.
+    </p>
+    <iframe
+      src="https://www.youtube-nocookie.com/embed/iW8YDWYIXlA?si=V6N9anYQie_GAIP-"
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen
+    ></iframe>
+  </section>
 </section>
 
 <script src="/static/face-api.js"></script>
