--- a/content/index.html
+++ b/content/index.html
@@ -1,25 +1,48 @@
 <section class="teaser">
-	
-	<img src="/assets/bg-image-3.jpg" />
+  <div class="ex A">
+    <a
+      class="bnt"
+      href="/gesichter-finden/"
+      aria-label="Experiment A: Gesichter finden"
+      >Gesichter finden</a
+    >
+  </div>
+  <div class="ex B">
+    <a
+      class="bnt"
+      href="/gesichter-erkennen/"
+      aria-label="Experiment B: Gesichter erkennen"
+      >Gesichter erkennen</a
+    >
+  </div>
 </section>
 <section class="container">
-	<p>
-	Entdecke die Grenzen und Möglichkeiten der Künstlichen Intelligenz (KI) am Beispiel der Gesichtserkennung. Dafür haben wir zwei interaktive Experimente entwickelt, in denen du die Technologie mit der Kamera deines Computers oder Smartphones selbst ausprobieren kannst. Zudem erläutern wir in Erklärvideos, wie die <b>KI-Systeme hinter unseren Experimenten funktionieren und wo sie bereits in unserer Gesellschaft eingesetzt werden.</b>
-	</p>
-	<p>
-Wir legen großen Wert auf Datenschutz: Deine persönlichen Daten werden nicht gespeichert, und die Systeme arbeiten lokal. Das heißt, sie werden auf deinem Gerät ausgeführt und beim Schließen des Browsers gelöscht.
+  <h1>Willkommen</h1>
 
-<h3><a href="/gesichter-finden/">Experiment A: Gesichter-Finden (Facial-Detection)</a></h3>
-<p>
-Finde heraus, ob dein Gesicht von dem Facial Detection System über die Kamera deines Laptops oder deines Handys auch als Gesicht erkennt. Im Experiment kannst du dann ausprobieren wie du das Gesichtsfindungs-System überlisten kannst. Teste, wie es auf verschiedene Tricks reagiert,  zum Beispiel durch das Verdecken deines Gesichts oder durch eine veränderte Perspektive. Probiere aus, wann das System ein Gesicht besser oder schlechter erkennt.
-</p>
-<h3><a href="/gesichter-erkennen/">Experiment B: Gesichter-Wiedererkennen (Facial-Recognition)</a></h3>
-<p>
-Für dieses Experiment gehen wir mit dir noch einen Schritt weiter. Erforsche, ob die KI in diesem Experiment genau dein Gesicht auf Fotos wiedererkennt und welche Bedingungen diese Erkennung besser oder schlechter macht. Hierfür kannst du die Lichtverhältnisse ändern oder eine leicht veränderte Perspektive einsetzen. Lade mehrere Fotos hoch, die dich in verschiedenen Lebensabschnitten zeigen, oder verwende Abbildungen anderer Personen, die dir vielleicht ähneln. Kannst du das Gesichtserkennungssystem austricksen? 
-</p>
-<h3>Projekt Künstliche Intelligenz, menschlich erklärt</h3>
-<p>
-Diese Webseite entstand im Rahmen des Projekts "Künstliche Intelligenz, menschlich erklärt". Die Inhalte wurden in einer Kooperation zwischen dem <a href="https://www.hiig.de/">Alexander von Humboldt Institut für Internet und Gesellschaft (HIIG)</a> und der gemeinnützigen Organisation <a href="https://www.neulandundgestalten.de/">neuland &amp; gestalten</a> erarbeitet. In den Erklärvideos kommt Jürgen Geuter (Director of Research | Art+Com) zu Wort.
-</p>
+  <p>
+    Mit dieser Webseite möchten wir euch einen spannenden Einblick in die Welt
+    der Künstlichen Intelligenz rund um das Thema Gesichtserkennung geben. Dafür
+    haben wir zwei Experimente zu Facial-Detection und Facial-Recognition als
+    Teil des Forschungsprojekts Künstliche Intelligenz, menschlich erklärt
+    entwickelt. Dieses Projekt wurde in Kooperation zwischen dem Alexander von
+    Humboldt Institut für Internet und Gesellschaft (HIIG) und der
+    gemeinnützigen Organisation neuland & gestalten durchgeführt und von der
+    Entwicklerin Esther Weidauer umgesetzt.
+  </p>
+
+  <p>
+    Diese Webseite lädt alle dazu ein, ein Gesichtsfindungs- und ein
+    Gesichtserkennungssystem auszuprobieren und mehr darüber zu erfahren, wie
+    solche Systeme funktionieren und welchen Bereichen sie eingesetzt werden.
+  </p>
+
+  <p>
+    Durch unser Projekt möchten wir grundlegendes Wissen über Künstliche
+    Intelligenz am Beispiel der Gesichtserkennung zugänglich machen. Eure
+    persönlichen Daten werden hier nicht gespeichert, die Nutzung der Systeme
+    funktioniert lokal und wird auf dem Rechner oder dem Handy abgelegt und
+    gelöscht, sobald du den Browser schließt.
+  </p>
+
+  <p>Viel Spaß beim Experimentieren und Lernen!</p>
 </section>
-
