Retouch Sarah und Larissa aka Grosse Kunst

--- a/content/gesichter-erkennen.html
+++ b/content/gesichter-erkennen.html
@@ -10,7 +10,7 @@
     Hier kannst du herausfinden, ob du das Gesichtserkennungssystem austricksen
     kannst. Das System erkennt dein Gesicht, wenn es grün markiert ist. Die
     Prozentzahl zeigt an, mit welcher Wahrscheinlichkeit genau dein Gesicht
-    erkannt wird.
+    wiedererkannt wird.
   </p>
 
   <div class="icon-help">
