--- a/content/gesichter-finden.html
+++ b/content/gesichter-finden.html
@@ -6,7 +6,7 @@
 
 <section class="container">
 
-  <h1>Gesichter-Finden (Facial-Detection)</h1>
+  <h1>Gesichtsfindung (Facial-Detection)</h1>
   <p>
     Hier hast du die Gelegenheit, das Gesichtsfindungssystem auf die Probe zu
     stellen und zu sehen, wie es auf verschiedene Kniffe reagiert. Das System
@@ -97,12 +97,6 @@
   </section>
 
   <p>
-    Wenn du mehr über das Thema Gesichts-Findung (Face-Detection) erfahren
-    möchtest, schau dir das Erklärvideo von Jürgen Geuter (Director of Research
-    | Art+Com) an. Dort erfährst du, wie das KI-System hinter diesem Experiment
-    funktioniert und in welchen Bereichen es Anwendung findet.
-  </p>
-  <p>
     Viel Spaß beim Experimentieren und Entdecken! Du trägst dazu bei,
     Gesichtserkennung besser zu verstehen und die Möglichkeiten und Grenzen
     dieser Technologie zu erkunden.
@@ -111,9 +105,10 @@
   <section class="video-embed">
     <h2>Erklärvideo zur Gesichtsfindung</h2>
     <p>
-      Wenn du mehr zu dem Thema Face-Detection erfahren möchtest, erklärt dir
-      Jürgen Geuter in diesem Video, wie das KI-System hinter diesem Experiment
-      funktioniert und wo es eingesetzt wird.
+      Wenn du mehr über das Thema Gesichts-Findung (Face-Detection) erfahren
+    möchtest, schau dir das Erklärvideo von Jürgen Geuter (Director of Research
+    | Art+Com) an. Dort erfährst du, wie das KI-System hinter diesem Experiment
+    funktioniert und in welchen Bereichen es Anwendung findet.
     </p>
     <iframe
       src="https://www.youtube-nocookie.com/embed/iW8YDWYIXlA?si=V6N9anYQie_GAIP-"
