--- a/content/index.html
+++ b/content/index.html
@@ -11,31 +11,27 @@
     <a
       class="bnt"
       href="/gesichter-erkennen/"
-      aria-label="Experiment B: Gesichter erkennen"
-      >Gesichter erkennen</a
+      aria-label="Experiment B: Gesichter wiedererkennen"
+      >Gesichter wiedererkennen</a
     >
   </div>
 </section>
 <section class="container">
-  <h1>Willkommen</h1>
+  <h1>KI Menschlich erklärt</h1>
 
   <p>
-    Mit dieser Webseite möchten wir euch einen spannenden Einblick in die Welt
-    der Künstlichen Intelligenz rund um das Thema Gesichtserkennung geben. Dafür
-    haben wir zwei Experimente zu Facial-Detection und Facial-Recognition als
-    Teil des Forschungsprojekts Künstliche Intelligenz, menschlich erklärt
-    entwickelt. Dieses Projekt wurde in Kooperation zwischen dem Alexander von
-    Humboldt Institut für Internet und Gesellschaft (HIIG) und der
-    gemeinnützigen Organisation neuland & gestalten durchgeführt und von der
-    Entwicklerin Esther Weidauer umgesetzt.
+    Entdecke die Grenzen und Möglichkeiten der Künstlichen Intelligenz (KI) am
+    Beispiel der Gesichtserkennung.
   </p>
 
   <p>
-    Diese Webseite lädt alle dazu ein, ein Gesichtsfindungs- und ein
-    Gesichtserkennungssystem auszuprobieren und mehr darüber zu erfahren, wie
-    solche Systeme funktionieren und welchen Bereichen sie eingesetzt werden.
+    Dafür haben wir zwei interaktive Experimente entwickelt, in denen du die
+    Technologie mit der Kamera deines Computers oder Smartphones selbst
+    ausprobieren kannst. Zudem erläutern wir in Erklärvideos, wie die KI-Systeme
+    hinter unseren Experimenten funktionieren und wo sie bereits in unserer
+    Gesellschaft eingesetzt werden.
   </p>
-
+  
   <p>
     Durch unser Projekt möchten wir grundlegendes Wissen über Künstliche
     Intelligenz am Beispiel der Gesichtserkennung zugänglich machen. Eure
