center home text

--- a/content/index.html
+++ b/content/index.html
@@ -16,7 +16,7 @@
     >
   </div>
 </section>
-<section class="container">
+<section class="container start">
   <h1>KI Menschlich erklärt</h1>
 
   <p>
