--- a/content/gesichter-erkennen.html
+++ b/content/gesichter-erkennen.html
@@ -112,13 +112,7 @@
       hinter diesem Experiment funktioniert, wo es im Einsatz ist und welchen
       Einfluss es auf unsere Gesellschaft hat.
     </p>
-    <iframe
-      src="https://www.youtube-nocookie.com/embed/9OP7Sn3MfeM?si=tetie5yCMb9qqFjL"
-      title="YouTube video player"
-      frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-      allowfullscreen
-    ></iframe>
+    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/hv4s5z9brWs?si=J3ndoed1tMLG0pxF" title="Erklärvideo zur Gesichtserkennung" frameborder="0" allowfullscreen></iframe>
   </section>
 </section>
 <script src="/static/face-api.js"></script>
