--- a/content/gesichter-finden.html
+++ b/content/gesichter-finden.html
@@ -110,13 +110,7 @@
     | Art+Com) an. Dort erfährst du, wie das KI-System hinter diesem Experiment
     funktioniert und in welchen Bereichen es Anwendung findet.
     </p>
-    <iframe
-      src="https://www.youtube-nocookie.com/embed/iW8YDWYIXlA?si=V6N9anYQie_GAIP-"
-      title="YouTube video player"
-      frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-      allowfullscreen
-    ></iframe>
+    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/gqXOVzhYG1k?si=yW986-qKTg_9xLDE" title="Erklärvideo zur Gesichtsfindung" frameborder="0" allowfullscreen></iframe>
   </section>
 </section>
 
