--- a/content/gesichter-erkennen.html
+++ b/content/gesichter-erkennen.html
@@ -23,7 +23,7 @@
   </div>
   <div class="icon-help">
     <div class="icon"><img src="/assets/icon-confirm.png" /></div>
-    <p>bestätigt das ausgewählte Referenxbild und die erkannten Gesichter</p>
+    <p>bestätigt das ausgewählte Referenzbild und die erkannten Gesichter</p>
   </div>
   <div class="icon-help">
     <div class="icon"><img src="/assets/icon-cancel.png" /></div>
